--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Phaser HTML5 Game powered by Express",
     "main": "index.js",
     "scripts": {
-        "test": "mocha --watch",
+        "test": "mocha --no-colors --watch",
         "dev": "pm2-dev index.js"
     },
     "repository": {
